--- a/website/about.html
+++ b/website/about.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href='styles/index.css' rel="stylesheet" />
-        <script async type='text/javascript' src='scripts/index.ts'></script>
-    </head>
-    <body>
-        <div id="container">
-            <h1>Hammer Build Test: About</h1>
-            <img src="images/hammer.png" />
-            <ul>
-                <li><a href="index.html">Index</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </body>
+  <head>
+    <link href="styles/index.css" rel="stylesheet" />
+    <script async type="text/javascript" src="scripts/index.ts"></script>
+  </head>
+  <body>
+    <div id="container">
+      <h1>Hammer Build Test: About</h1>
+      <img src="images/hammer.png" />
+      <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
