--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="module" src="scripts/index.ts"></script>
     <link href="styles/index.css" rel="stylesheet" />
-    <script async type="text/javascript" src="scripts/index.ts"></script>
   </head>
   <body>
     <div id="container">
